--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <img src="./assets/img/logo.svg" alt="">
         </picture>
         <div class="header-title-container">
-            <h1>La proxima revolucion en el intercambio de criptomonedas</h1>
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="" class="header-bottom">Conoce Nuestros Planes <span>i</span></a>
+            <a href="" class="header-bottom">Conoce Nuestros Planes <span></span></a>
         </div>
     </header>
     <main>
