--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header-title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="" class="header-bottom">Conoce Nuestros Planes <span></span></a>
+            <a href="#plans" class="header-bottom">Conoce Nuestros Planes <span></span></a>
         </div>
     </header>
     <main>
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <div class="currency-table--date">
-                            <p> <b>Actualizado:</b>  19 de julio a las 23:45</p>
+                            <p> Valores en <b> $ USD</b>  </p>
                         </div>
                     </div>
                 </div>
@@ -89,15 +89,101 @@
                             </div>
                         </div>
                         <div class="currency-table--date2">
-                            <p> <b>Actualizado:</b>  19 de julio a las 23:45</p>
+                            <p> Valores en <b> $ USD</b>  </p>
                         </div>
                     </div>
                 </div>
             </section>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+
+        <section class="main-product-detail">
+            <span class="main-product-image"></span>
+            <div>
+                <h2>Creamos un producto sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="icon-card clock"></span>
+                    <h3 class="product--card-title">Tiempo real</h3>
+                    <p class="product--card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+                </article>
+            </section>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="icon-card vision"></span>
+                    <h3 class="product--card-title">No hay tasas escondidas</h3>
+                    <p class="product--card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+            </section>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="icon-card stonks"></span>
+                    <h3 class="product--card-title">Compara monedas</h3>
+                    <p class="product--card-body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                </article>
+            </section>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="icon-card check"></span>
+                    <h3 class="product--card-title">Información confiable</h3>
+                    <p class="product--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </article>
+            </section>
+        </section>
+
+        <section class="bitcoin-img-container">
+            <h2>Conócelo hoy.</h2>
+        </section>
+
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section class="plans-container--sider">
+                
+                <article class="plans-container--card">
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span> 5</p>
+                        <p class="plan-card-saving">*Plan básico para mantenerte informado.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+
+                <article class="plans-container--card">
+                    <p class="recommended">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span> 49</p>
+                        <p class="plan-card-saving">*Ahorras $180 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+
+                <article class="plans-container--card">
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Acceso de por vida</h3>
+                        <p class="plan-card--price"><span>$</span> 99</p>
+                        <p class="plan-card-saving">*Ahorras $999+ comparado al plan anual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span></button>
+                    </div>
+                </article>
+            </section>
+
+            <section class="plans-container--question" >
+                <div class="plans--title question">
+                    <h2>¿Preguntas? Aquí estamos para ti.</h2>
+                    <p> Batabit me permite hacer compras en su plataforma?<span></span></p>
+                    <p> Qué es Bitcoin?<span></span></p>
+                    <p> Cómo puedo realizar una transacción en bitcoins?<span></span></p>
+                    <p> Cómo aseguro mis compras?<span></span></p>
+                </div>
+            </section>
+        </section>
+
+        
     </main>
     <footer></footer>
 </body>
